Findbug fix.